<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">চাষাবাদ</string>
    <string name="title_text">পেঁয়াজ চাষ চক্র</string>
    <string name="guide_text">ছবি চাপুন, তথ্য জানুন</string>
    <string name="lang_btn_text">English</string>
    <string name="title_activity_seed">বীজ</string>
    <string name="seed_text">
        "পেঁয়াজকে শীতল মৌসুমের সবজি হিসেবে বিবেচনা করা হয়।"
        "তবে অঞ্চলের উপর নির্ভর করে এগুলি বছরের দুটি ভিন্ন সময়ে রোপণ করা যেতে পারে।"
        "বীজ রোপণের পরে, মাটি সর্বদা আর্দ্র রাখতে হয়।"
        "অঙ্কুরোদগম করতে সক্ষম বীজগুলি তাদের প্রতিরক্ষামূলক বীজ আবরণের মধ্যে একটি ভ্রূণ এবং খাদ্য মজুদ উভয়ই ধারণ করে।"
        "মাটির আর্দ্রতা বীজের আবরণকে নরম করে, বীজের ভিতরে আর্দ্রতা সেলুলার শ্বসন এবং খাদ্য সংরক্ষণের বিপাককে ট্রিগার করে।"
        "বীজ প্রায় দশ দিনের মধ্যে অঙ্কুরিত হয়।"
    </string>
    <string name="seedling_text">
        "অঙ্কুরোদ্গমের প্রথম পর্যায় হল ভ্রূণমুকুলের উত্থান।"
        "বীজ মূল বীজকে জায়গায় নোঙর করে এবং ক্রমবর্ধমান চারার বৃদ্ধিতে সহায়তা করে।"
        "বীজ মূল গাছের বৃদ্ধি বজায় রাখার জন্য আর্দ্রতা এবং পুষ্টি সংগ্রহ করে।"
        "দুর্বল বীজ আবরণের মধ্য দিয়ে অঙ্কুর বের হয়, অবশেষে মাটির পৃষ্ঠ ভেঙ্গে যায়।"
        "শীঘ্রই, প্রথম আসল পাতাগুলি দেখা যায়, যা উদ্ভিদের পরিপক্ক পাতার  অনুরূপ, উদ্ভিদের বিকাশে পরিবর্তনের ইঙ্গিত দেয় যখন চারা সালোকসংশ্লেষণের মাধ্যমে শক্তি পেতে শুরু করে।"
    </string>
    <string name="vine_text">
        "এই পর্যায়ে, ছোট পেঁয়াজ গাছটি তার মূল তৈরি করতে শুরু করে।"
        "দ্রুত উদ্ভিদের বৃদ্ধি শুরু করার আগে চারাটি আরও শিকড় এবং আরও কয়েকটি প্রাপ্তবয়স্ক পাতা তৈরি করে।"
        "উদ্ভিজ্জ বিকাশের পর্যায়ে, সবুজ পেঁয়াজ গাছটি ধীরে ধীরে কয়েকটি পাতলা পাতা থেকে প্রায় 10টি পাতায় চলে যায়।"\n\n

        "পেঁয়াজের পাতা দ্রুত বিকাশ লাভ করে। পেঁয়াজ মাত্র কয়েকটি পাতা দিয়ে শুরু করে, সপ্তাহে আট থেকে দশটি সুস্থ পাতা গজায়।"
        "পেঁয়াজ যখন বাল্ব তৈরির জন্য প্রস্তুত হয় তখন পাতার বিকাশ বন্ধ হয়ে যায়।"

    </string>
    <string name="flower_text">
        "যখন পেঁয়াজের কমপক্ষে চারটি পাতা থাকে, তখন তারা বাল্ব উৎপাদনের দিকে তাদের শক্তি প্রয়োগ করতে থাকে।"
        "পাতাগুলি ক্রমাগত বাড়তে থাকে এবং দীর্ঘায়িত হয়, সালোকসংশ্লেষণের জন্য উপলব্ধ পৃষ্ঠের ক্ষেত্রফল বৃদ্ধি করে।"
        "প্রতিটি পাতা একটি স্কেল প্রতিনিধিত্ব করে যা অবশেষে কন্দর রিংগুলির মধ্যে একটি হয়ে যায়।"
        "কন্দগুলির কেন্দ্রীয় টিস্যু গঠনের জন্য পাতার আবরণগুলি ফুলে যায়।"
        "কয়েক সপ্তাহ পরে, পেঁয়াজের কন্দ মাটি থেকে বেরিয়ে আসে, পেঁয়াজের শীর্ষটি প্রকাশ করে।"
        "পেঁয়াজ কাটার জন্য প্রস্তুত যখন শীর্ষগুলি ঝুলে যায় এবং বাদামী হয়ে যায়।"

    </string>
    <string name="fruit_text">
        "৭০-৮০ দিন পর, পেঁয়াজ সম্পূর্ণ পরিপক্ক এবং ফসল কাটার জন্য প্রস্তুত হয় ।"
        "পেঁয়াজ পরিপক্ক হওয়ার ঠিক আগেই সর্বোচ্চ আকারে পৌঁছায় যখন কন্দগুলি সবেমাত্র বিকাশ শুরু করে।"
        "এর পরেও পেঁয়াজ বাছাই করা যেতে পারে, তবে পরিপক্ক পেঁয়াজের একটি মশলাদার স্বাদ রয়েছে।"

    </string>
    <string name="cucumber_text">
        "যদি পেঁয়াজ না কাটা হয় এবং শীতকালে মাটিতে ছেড়ে দেওয়া হয়, তাহলে বসন্তে সেগুলি আবার বৃদ্ধি পাবে।"
        "এই মুহুর্তে ভূগর্ভস্থ বাল্বগুলি ইতিমধ্যেই তন্তুযুক্ত ।"
        "যেহেতু মূল গাছটি  আগের বছর পরিপক্ক হয়েছিল, গাছটি তার পুরো শক্তিকে মাটির উপরিভাগের মধ্য দিয়ে নতুন অঙ্কুর তৈরি করতে  থাকে।"
        "আবহাওয়া উষ্ণ হওয়ার সাথে সাথে বায়ু এবং মাটির তাপমাত্রা বৃদ্ধি পায় এবং গাছটিতে  ফুলের ডাঁটা গজানো শুরু হয়।"
        "যখন এটি ঘটে, গাছটি হঠাৎ করে বৃদ্ধি বন্ধ করে দেয় এবং তার জীবনচক্রের শেষের জন্য প্রস্তুত হয়। ডাঁটা সম্পূর্ণ পরিপক্ক হয়ে গেলে, গাছের উপরের অংশে সাদা বা বেগুনি রঙের ফুল ফোটে।"
        "পাখি, মৌমাছি এবং প্রজাপতিরা বীজযুক্ত রঙিন, গোলাকার ফুলের মাথার পরাগায়ন করে।"
        "বীজ প্রদর্শিত হওয়ার পরে, পেঁয়াজ গাছের জীবনচক্র সম্পূর্ণ হয়।"

    </string>
    <string name="action_settings">সেটিংস</string>
    <string name="title_activity_seedling">অঙ্কুরোদ্গম</string>
    <string name="title_activity_vine">উদ্ভিজ্জ</string>
    <string name="title_activity_flower">কন্দ গঠন</string>
    <string name="title_activity_fruit">পরিপক্কতা</string>
    <string name="title_activity_cucumber">প্রজনন</string>
    <string name="arrow">তীর চিহ্ন</string>
</resources>