<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/lang_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@android:color/white"
                android:text="@string/lang_btn_text"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <!--androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"-->
    <TextView
        android:id="@+id/title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/title_text"
        android:textColor="@color/purple_500"
        android:textSize="10pt"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout" />

    <ImageButton
        android:id="@+id/button"
        android:layout_width="70dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/seed1"
        android:contentDescription="@string/title_activity_seed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_textView" />

    <TextView
        android:id="@+id/seed_fig_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/title_activity_seed"
        android:textColor="@color/purple_200"
        android:textSize="8pt"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/arrow"
        android:rotation="50"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:srcCompat="@drawable/arrow" />

    <ImageButton
        android:id="@+id/button2"
        android:layout_width="70dp"
        android:layout_height="56dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/germination"
        android:contentDescription="@string/title_activity_seedling"
        app:layout_constraintBottom_toTopOf="@+id/seedling_fig_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/seedling_fig_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/title_activity_seedling"
        android:textColor="@color/purple_200"
        android:textSize="8pt"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/arrow"
        android:rotation="88"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/seedling_fig_name"
        app:srcCompat="@drawable/arrow" />

    <ImageButton
        android:id="@+id/button3"
        android:layout_width="70dp"
        android:layout_height="56dp"
        android:background="@drawable/vegetative"
        android:contentDescription="@string/title_activity_vine"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/vine_fig_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/title_activity_vine"
        android:textColor="@color/purple_200"
        android:textSize="8pt"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintStart_toStartOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/arrow"
        android:rotation="132"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/vine_fig_name"
        app:srcCompat="@drawable/arrow" />

    <ImageButton
        android:id="@+id/button4"
        android:layout_width="70dp"
        android:layout_height="56dp"
        android:background="@drawable/bulb"
        android:contentDescription="@string/title_activity_flower"
        app:layout_constraintBottom_toTopOf="@+id/flower_fig_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seed_fig_name" />

    <TextView
        android:id="@+id/flower_fig_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/title_activity_flower"
        android:textColor="@color/purple_200"
        android:textSize="8pt"
        app:layout_constraintEnd_toEndOf="@+id/button4"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/arrow"
        android:rotation="-124"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/fruit_fig_name"
        app:srcCompat="@drawable/arrow" />

    <ImageButton
        android:id="@+id/button5"
        android:layout_width="70dp"
        android:layout_height="56dp"
        android:background="@drawable/maturation"
        android:contentDescription="@string/title_activity_fruit"
        app:layout_constraintBottom_toTopOf="@+id/fruit_fig_name"
        app:layout_constraintEnd_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/fruit_fig_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/title_activity_fruit"
        android:textColor="@color/purple_200"
        android:textSize="8pt"
        app:layout_constraintBottom_toTopOf="@id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/button5"
        app:layout_constraintStart_toStartOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/arrow"
        android:rotation="-90"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="@+id/button6"
        app:layout_constraintStart_toStartOf="@id/button5"
        app:layout_constraintTop_toBottomOf="@+id/cucumber_fig_name"
        app:srcCompat="@drawable/arrow" />

    <ImageButton
        android:id="@+id/button6"
        android:layout_width="70dp"
        android:layout_height="56dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/reproduction"
        android:contentDescription="@string/title_activity_cucumber"
        app:layout_constraintBottom_toTopOf="@+id/cucumber_fig_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <TextView
        android:id="@+id/cucumber_fig_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/title_activity_cucumber"
        android:textColor="@color/purple_200"
        android:textSize="8pt"
        app:layout_constraintBottom_toTopOf="@id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/button6"
        app:layout_constraintStart_toStartOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/arrow"
        android:rotation="-42"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:srcCompat="@drawable/arrow" />

    <TextView
        android:id="@+id/guide_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/guide_text"
        android:textColor="@color/purple_500"
        android:textSize="9pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--/androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView-->
</androidx.constraintlayout.widget.ConstraintLayout>